# fork-cs6868_s26

./: .gitattributes  Gemfile  README.md  _config.yml  assignments.md  index.md  ipa.gemspec  project_ideas.md  resources.md  schedule.md
.github/: copilot-instructions.md
_includes/: head.html
_layouts/: page.html
_sass/: _layout.scss
assets/css/: main.scss
assignments/assignment1_treelock/: .gitignore  Makefile  PetersonNode.ml  PetersonNode.mli  README.md  Test.ml  TreeLock.ml  TreeLock.mli  dune-project
assignments/assignment2_atomic_snapshot/: Makefile  README.md  Snapshot.ml  Snapshot.mli  dune  dune-project  qcheck_lin_snapshot.ml  qcheck_stm_snapshot.ml  test_manual.ml
lectures/01_introduction/: 01_introduction.key
lectures/01_introduction/code/: Makefile  README.md  dune  prod_cons.ml  prod_cons_flag_proto.ml
lectures/02_mutual_exclusion/: 02_mutual_exclusion.key
lectures/02_mutual_exclusion/code/: Bakery.ml  LockOne.ml  LockTwo.ml  Makefile  Peterson.ml  dune
lectures/03_concurrent_objects/: 03_concurrent_objects.key
lectures/03_concurrent_objects/code/: README.md
lectures/03_concurrent_objects/code/lib/: bounded_queue.ml
lectures/03_concurrent_objects/code/test/: dune  qcheck_stm_lockfree.ml
lectures/04_memory_consistency_models/code/: README.md  a.out  peterson_race.cmx  peterson_race.s  peterson_race_fixed.cmx  peterson_race_fixed.ml  peterson_race_fixed.s
lectures/05_spinlocks_and_contention/: 05_spinlocks_and_contention.key
lectures/05_spinlocks_and_contention/code/: ALock.ml  ALockNoCpuRelax.ml  BackoffLock.ml  Benchmark.ml  Lock.ml  Makefile  README.md  STRUCTURE.md  TASLock.ml  TTASLock.ml  TTASLockUnsafe.ml  benchmark_all_locks.ml  benchmark_alock.ml  benchmark_alock_custom.ml  benchmark_backoff.ml  benchmark_sequential_bottleneck.ml  benchmark_tas.ml  benchmark_ttas.ml  compare_alock_variants.ml  compare_locks.ml  compare_ttas_variants.ml  debug_alock.ml  debug_alock_progress.ml  dune  plot_benchmark.py  plot_turing_24.py  run_benchmarks.sh  test_alock.ml  test_alock_double_capacity.ml  test_alock_no_relax.ml  test_backoff.ml  test_tas.ml  test_ttas.ml  test_ttas_unsafe.ml  tune_backoff.ml
lectures/06_monitors_and_synchronization/: 06_monitors_and_synchronization.key
lectures/06_monitors_and_synchronization/code/: README.md
lectures/06_monitors_and_synchronization/code/lib/: dune  fifo_rw_lock.ml  fifo_rw_lock.mli  queue_blocking.ml  queue_blocking.mli  queue_non_blocking.ml  queue_non_blocking.mli  queue_spin_wait.ml  queue_spin_wait.mli  simple_rw_lock.ml  simple_rw_lock.mli
lectures/06_monitors_and_synchronization/code/test/: dune  test_blocking.ml  test_deadlock.ml  test_non_blocking.ml  test_rw_invariants.ml  test_rw_locks.ml  test_spin_wait.ml
lectures/07_linked_lists/: 07_linked_lists.key
lectures/07_linked_lists/code/benchmarks/: plot_results.py  run_benchmarks.sh
lectures/07_linked_lists/code/lib/: atomic_markable_ref.ml  atomic_markable_ref.mli  coarse_list.ml  dune  lockfree_list.ml  optimistic_list.ml  optimistic_list_racefree.ml  seq_list.ml
lectures/07_linked_lists/code/test/: dune  qcheck_lin_coarse_list.ml  qcheck_lin_fine_list.ml  qcheck_stm_coarse_list.ml  qcheck_stm_fine_list.ml
lectures/08_queues_and_stacks/code/lib/: dune  lockfree_stack.ml
lectures/08_queues_and_stacks/code/test/: dune
lectures/09_effect_handlers/: 09_effect_handlers.key
lectures/09_effect_handlers/code/: dune  state.ml
lectures/09_effect_handlers/code/lib/: dune
lectures/09_effect_handlers/code/tests/: domains_vs_fibers.ml  dune  sched_test.ml
lectures/09_effect_handlers/code/tests/golike_multicore/: dune
project/lib/: circular_array.ml  circular_array.mli  deque.ml  deque.mli  dune  scheduler.ml  scheduler.mli
project/report-template/: main.tex  references.bib
project/test/: dune
work-steal/: README.md  dune-project
work-steal/lib/: benchmark.ml  benchmark.mli  circular_array.ml  deque.ml  deque.mli  dune  future.ml  future.mli  naive_scheduler.ml  naive_scheduler.mli  scheduler.ml  scheduler.mli
work-steal/outputs/: plot_fibonacci_throughput.py  plot_map_throughput.py  plot_mergesort_throughput.py  result-fibonacci.txt  result-mapprime.txt  result-mergesort.txt
work-steal/report/: references.bib  work-steal-report.tex
work-steal/test/: dune  test_deque_qcheck_lin.ml  test_deque_qcheck_stm.ml
