(executable
 (name prime_sequential)
 (libraries unix))

(executable
 (name prime_ranges)
 (libraries unix))

(executable
 (name prime_counter)
 (libraries unix))

(executable
 (name fib))

(executable
 (name fib_twice))

(executable
 (name prod_cons)
 (modules prod_cons)
 (preprocess (pps ppx_deriving.show))
 (libraries unix))

(executable
 (name prod_cons_flag_proto)
 (modules prod_cons_flag_proto)
 (preprocess (pps ppx_deriving.show))
 (libraries unix))
