(library
 (name seq_list)
 (modules seq_list))

(library
 (name coarse_list)
 (modules coarse_list))

(library
 (name fine_list)
 (modules fine_list))

(library
 (name optimistic_list)
 (modules optimistic_list))

(library
 (name lazy_list)
 (modules lazy_list))

(library
 (name atomic_markable_ref)
 (modules atomic_markable_ref))

(library
 (name lockfree_list)
 (modules lockfree_list)
 (libraries atomic_markable_ref))
