(executable
 (name test_coarse_list)
 (modules test_coarse_list)
 (libraries coarse_list))

(executable
 (name qcheck_lin_coarse_list)
 (modules qcheck_lin_coarse_list)
 (libraries coarse_list qcheck-lin.domain))

(executable
 (name qcheck_stm_coarse_list)
 (modules qcheck_stm_coarse_list)
 (libraries coarse_list qcheck-stm.sequential qcheck-stm.domain qcheck-multicoretests-util))
